[project]
name = "perplexity"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Cui",email = "bh@bugs.cc"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
]

[tool.poetry]
package-mode = false
packages = [{include = "perplexity", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
